# stepg-backend

./: .coderabbit.yaml  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml
.claude/skills/apply-critic/: SKILL.md
.claude/skills/check/: SKILL.md
.claude/skills/cleanup-branches/: SKILL.md
.claude/skills/coderabbit-respond/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/critic/: SKILL.md
.claude/skills/finish-pr/: SKILL.md
.claude/skills/start-milestone/: SKILL.md
.claude/skills/start-review/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.github/: pull_request_template.md
apps/api/: pyproject.toml
apps/api/stepg_api/: main.py
apps/api/stepg_api/auth/: deps.py  nextauth_jwt.py
apps/api/stepg_api/routes/: onboarding.py
apps/worker/: pyproject.toml
apps/worker/stepg_worker/: __init__.py  worker.py
docs/: ARCHITECTURE.md  PROMPTS.md  TAXONOMY.md
docs/api/: openapi.json
docs/benchmarks/: grantmatch.md  instrumentl.md  pocketed.md
docs/eval/: guide.md  labels.csv  m4_baseline.md  postings.csv
docs/integrations/clova_ocr/: CLOVA_OCR_CUSTOM_API_EXTERNAL_V1.1.json
docs/legacy/: assets.md  pitfalls.md
docs/methodology/: daily-loop.md  pr-review.md
docs/plans/: backend.md  frontend.md
docs/templates/frontend/: .coderabbit.yaml
docs/templates/frontend/.github/: pull_request_template.md
infra/: docker-compose.dev.yml
scripts/: batch_baseline.py  export_openapi.py
tests/: conftest.py
tests/integration/extraction/: conftest.py  test_golden.py
tests/unit/extraction/: test_stage2.py
