[project]
name = "stepg-api"
version = "0.0.0"
description = "stepg FastAPI app"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135",
    "pyjwt>=2.10",
    "python-multipart>=0.0.18",
    "stepg-core",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stepg_api"]
