[project]
name = "stepg-worker"
version = "0.0.0"
description = "stepg ARQ worker"
requires-python = ">=3.14"
dependencies = [
    "arq>=0.26.3",
    "stepg-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stepg_worker"]
